# youtube-russian-anki

./: .env.example  .gitignore  LICENSE  README.md  START_HERE.bat  UPDATE_AND_RESTART.bat  install.bat  pyproject.toml  requirements.txt  start_service.bat
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
scripts/: install.ps1  start_here.ps1  update_and_restart.ps1
tests/: test_anki.py  test_core_words.py  test_ipa.py  test_language.py  test_pipeline_dictionary.py  test_security.py  test_transcript.py  test_translation.py  test_wiktionary.py
yt_anki/: __init__.py  anki.py  core_words.py  db.py  deepl_client.py  ipa.py  language.py  media.py  pipeline.py  progress.py  security.py  service.py  settings.py  transcript.py  translation.py  wiktionary.py
